@@ -20,30 +20,26 @@
 
 package password.pwm.config.value;
 
-import com.google.gson.reflect.TypeToken;
 import password.pwm.PwmConstants;
 import password.pwm.config.PwmSetting;
 import password.pwm.config.stored.StoredConfigXmlConstants;
 import password.pwm.config.stored.XmlOutputProcessData;
 import password.pwm.config.value.data.RemoteWebServiceConfiguration;
 import password.pwm.error.PwmOperationalException;
-import password.pwm.util.json.JsonFactory;
+import password.pwm.util.java.CollectionUtil;
 import password.pwm.util.java.StringUtil;
 import password.pwm.util.java.XmlElement;
 import password.pwm.util.java.XmlFactory;
+import password.pwm.util.json.JsonFactory;
 import password.pwm.util.logging.PwmLogger;
 import password.pwm.util.secure.PwmSecurityKey;
-import password.pwm.util.secure.X509Utils;
 
 import java.io.Serializable;
-import java.security.cert.X509Certificate;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Locale;
-import java.util.Map;
-import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 
@@ -55,7 +51,7 @@ public class RemoteWebServiceValue extends AbstractValue implements StoredValue
 
     public RemoteWebServiceValue( final List<RemoteWebServiceConfiguration> values )
     {
-        this.values = Collections.unmodifiableList( values );
+        this.values = List.copyOf( CollectionUtil.stripNulls( values ) );
     }
 
     public static StoredValueFactory factory( )
@@ -71,10 +67,7 @@ public class RemoteWebServiceValue extends AbstractValue implements StoredValue
                 }
                 else
                 {
-                    List<RemoteWebServiceConfiguration> srcList = JsonFactory.get().deserializeList( input, RemoteWebServiceConfiguration.class );
-                    srcList = srcList == null ? new ArrayList<>() : srcList;
-                    srcList.removeIf( Objects::isNull );
-                    return new RemoteWebServiceValue( Collections.unmodifiableList( srcList ) );
+                    return new RemoteWebServiceValue( JsonFactory.get().deserializeList( input, RemoteWebServiceConfiguration.class ) );
                 }
             }
 
@@ -138,7 +131,7 @@ public class RemoteWebServiceValue extends AbstractValue implements StoredValue
     @Override
     public List<RemoteWebServiceConfiguration> toNativeObject( )
     {
-        return Collections.unmodifiableList( values );
+        return values;
     }
 
     @Override
@@ -165,29 +158,6 @@ public class RemoteWebServiceValue extends AbstractValue implements StoredValue
 
         return Collections.emptyList();
     }
-
-    public List<Map<String, Object>> toInfoMap( )
-    {
-        final String originalJson = JsonFactory.get().serializeCollection( values );
-        final List<Map<String, Object>> tempObj = JsonFactory.get().deserialize( originalJson, new TypeToken<List<Map<String, Object>>>()
-        {
-        } );
-        for ( final Map<String, Object> mapObj : tempObj )
-        {
-            final RemoteWebServiceConfiguration serviceConfig = forName( ( String ) mapObj.get( "name" ) );
-            if ( serviceConfig != null && serviceConfig.getCertificates() != null )
-            {
-                final List<Map<String, String>> certificateInfos = new ArrayList<>();
-                for ( final X509Certificate certificate : serviceConfig.getCertificates() )
-                {
-                    certificateInfos.add( X509Utils.makeDebugInfoMap( certificate, X509Utils.DebugInfoFlag.IncludeCertificateDetail ) );
-                }
-                mapObj.put( "certificateInfos", certificateInfos );
-            }
-        }
-        return tempObj;
-    }
-
 
     public RemoteWebServiceConfiguration forName( final String name )
     {
